tdf#161019 tdf#159846 spreadsheet border rendering

regression from
    commit e27d4cc31e04be4c47b5085dfa2363ee45457e8a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Jun 19 12:23:55 2023 +0200
    tdf#150534 reduce the memory consumption of cells when calculating

Change-Id: Id8b52a3a0880bbb6a7aff28f55bcd57cb1cae048
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167617
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>